[gd_scene load_steps=11 format=3 uid="uid://cncdb80jk87ro"]

[ext_resource type="Script" path="res://level_0/scripts/ph_player.gd" id="1_sferh"]
[ext_resource type="PackedScene" uid="uid://doy784qg00an6" path="res://level_0/scenes/player_sprite.tscn" id="2_ibcwa"]
[ext_resource type="Script" path="res://level_0/scripts/player_sprite.gd" id="3_t4ewx"]
[ext_resource type="AudioStream" uid="uid://dcgnc52y00ub1" path="res://general/sfx/PH_smack_oof.mp3" id="4_67kgj"]
[ext_resource type="Script" path="res://level_0/scripts/player_hitbox.gd" id="4_emgrs"]
[ext_resource type="Texture2D" uid="uid://cjxlqvabip5ds" path="res://general/sprites/PH_skel.png" id="5_1n5ih"]
[ext_resource type="AudioStream" uid="uid://bhthfp8twchfs" path="res://general/sfx/PH_bonk.mp3" id="6_j0yq8"]
[ext_resource type="AudioStream" uid="uid://dax385w8ipswy" path="res://general/sfx/cc0_584198__unfa__weapons-plasma-shot-06.mp3" id="7_akb3i"]
[ext_resource type="AudioStream" uid="uid://bfyocdciq634t" path="res://general/sfx/cc0_445345__bolkmar__fx-shot-machine-gun.wav" id="9_xjgq7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8mkx"]
size = Vector2(10.375, 17.5)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_sferh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 3)
polygon = PackedVector2Array(-6, 0, 6, 0, 6, 10, -1, 15, -7, 15, -10, 10, -7, 4)

[node name="PhSank" parent="CollisionPolygon2D" instance=ExtResource("2_ibcwa")]
position = Vector2(0, 0)
script = ExtResource("3_t4ewx")

[node name="BulletEmitter" type="Node2D" parent="CollisionPolygon2D/PhSank"]
position = Vector2(8, 5)

[node name="Hitbox" type="Area2D" parent="CollisionPolygon2D/PhSank"]
visible = false
position = Vector2(-1, 15)
collision_layer = 64
collision_mask = 64
script = ExtResource("4_emgrs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionPolygon2D/PhSank/Hitbox"]
position = Vector2(1, -15)
shape = SubResource("RectangleShape2D_e8mkx")
debug_color = Color(1, 0, 0, 0.419608)

[node name="PhSkel" type="Sprite2D" parent="CollisionPolygon2D"]
visible = false
position = Vector2(3, 3.5)
scale = Vector2(0.0585937, 0.0515504)
texture = ExtResource("5_1n5ih")

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_67kgj")

[node name="cheat_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_j0yq8")

[node name="shoot_default" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_akb3i")
volume_db = -3.0
pitch_scale = 0.6

[node name="shoot_mg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xjgq7")
volume_db = 6.0
pitch_scale = 1.2
